# system_dbus

./: ChangeLog  Makefile.am  aclocal.m4  configure.ac  dbus-1-daemon.pc.in
.gitlab/merge_request_templates/: component.md
android/: build.gradle  gradle.properties  settings.gradle
android/config/: dbus.xml
android/dbus/: build.gradle
android/dbus/src/main/: AndroidManifest.xml
android/dbus/src/main/java/com/wyplay/tvmiddleware/dbus/: DBusNative.java  DBusService.java  DBusServiceInfo.java
android/gradle/wrapper/: gradle-wrapper.properties
bus/: Makefile.am  config-parser.c  dbus-daemon.c  dbus-daemon.h  dbus-jni.c  dbus-jni.h  dbus-unix.c  dbus-unix.h  main.c  system.conf.in
dbus/: Makefile.am  dbus-auth.c  dbus-connection.c  dbus-hash.c  dbus-sysdeps-util-unix.c  dbus-sysdeps.h
tools/: .gitignore  Makefile.am
